# bevy_asset_template

./: Cargo.toml  LICENSE-MIT  README.md  readme.md
.github/workflows/: ci.yaml
examples/: example.rs
src/: plugin.rs
